--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -205,6 +205,7 @@ jobs:
         env:
           PYFLUENT_LAUNCH_CONTAINER: "1"
           PYFLUENT_START_INSTANCE: "0"
+          AWP_ROOT241: "./dpf-standalone/v241"
           # AWP_ROOT241: ${{ secrets.AWP_ROOT241 }}
         run: |
           echo "Image tag: $FLUENT_IMAGE_TAG"
