--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -13,8 +13,8 @@ env:
   DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
-  # PYFLUENT_START_INSTANCE: "0"
-  # PYFLUENT_LAUNCH_CONTAINER: "1"
+  PYFLUENT_START_INSTANCE: "0"
+  PYFLUENT_LAUNCH_CONTAINER: "1"
   FLUENT_IMAGE_TAG: v24.2.0
 
 jobs:
@@ -201,10 +201,9 @@ jobs:
       #     echo "PYFLUENT_LAUNCH_CONTAINER=1" >> $GITHUB_ENV
 
       - name: Run tests
-        env:
-          PYFLUENT_LAUNCH_CONTAINER: "1"
-          PYFLUENT_START_INSTANCE: "0"
-          AWP_ROOT241: "./dpf-standalone/v241"
+        # env:
+          # PYFLUENT_LAUNCH_CONTAINER: "1"
+          # PYFLUENT_START_INSTANCE: "0"
           # AWP_ROOT241: ${{ secrets.AWP_ROOT241 }}
         run: |
           find . -type d -name "v241"
