debug: modify tox to pass env variables

--- a/tox.ini
+++ b/tox.ini
@@ -26,11 +26,11 @@ basepython =
     {style,tests,doc}: python3
 
 passenv =
-    PYFLUENT_*
-    AWP_ROOT*
-    PYANSYS_HEART*
-    ANSYS_DPF_ACCEPT_LA
     *
+    ; PYFLUENT_*
+    ; AWP_ROOT*
+    ; PYANSYS_HEART*
+    ; ANSYS_DPF_ACCEPT_LA
 
 setenv =
     PYTHONUNBUFFERED = yes
