debug: modify tox to pass env variables

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -213,7 +213,8 @@ jobs:
           echo "AWP_ROOT env var: $AWP_ROOT241"
 
           . .venv/bin/activate
-          python -m tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
+          # python -m tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
+          python -m pytest tests -- -m "${{ matrix.tests.markers }}" -vv
 
 
   build-library:
