debug: modify tox to pass env variables

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -214,6 +214,7 @@ jobs:
 
           . .venv/bin/activate
           # python -m tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
+          pip install pytest
           python -m pytest tests -- -m "${{ matrix.tests.markers }}" -vv
 
 
