fix: add env variables to tox

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,12 @@ basepython =
     tests313: python3.13
     {style,tests,doc}: python3
 
+passenv =
+    PYFLUENT_*
+    AWP_ROOT*
+    PYANSYS_HEART*
+    ANSYS_DPF_ACCEPT_LA
+
 setenv =
     PYTHONUNBUFFERED = yes
     coverage: PYTEST_EXTRA_ARGS = --cov=ansys.heart --cov-report=term --cov-report=xml:.cov/{env_name}/xml --cov-report=html:.cov/{env_name}/html
