--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -13,6 +13,7 @@ env:
   DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
+  PYFLUENT_UI_MODE: "no_gui"
   # PYFLUENT_START_INSTANCE: 0
   # PYFLUENT_LAUNCH_CONTAINER: 1
   # FLUENT_IMAGE_TAG: v24.2.0
@@ -151,7 +152,7 @@ jobs:
         python-version: ['3.11', '3.12']
         tests:
           - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or extract_models or k_file_writer)", use_dpf: true }
-          - { name: "PyFluent", runner: "self-hosted", markers: "requires_fluent or extract_models or k_file_writer", pull_fluent_image: false }
+          - { name: "PyFluent", runner: ["self-hosted", "pyhealth"], markers: "requires_fluent or extract_models or k_file_writer", pull_fluent_image: false }
     steps:
 
       - name: Checkout project
