--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -14,9 +14,9 @@ env:
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
   PYFLUENT_UI_MODE: "no_gui"
-  # PYFLUENT_START_INSTANCE: 0
-  # PYFLUENT_LAUNCH_CONTAINER: 1
-  # FLUENT_IMAGE_TAG: v24.2.0
+  PYFLUENT_START_INSTANCE: 0
+  PYFLUENT_LAUNCH_CONTAINER: 1
+  FLUENT_IMAGE_TAG: v24.2.0
 
 jobs:
 
