--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,7 +124,7 @@ show_missing = true
 [tool.pytest.ini_options]
 pythonpath = ["."]
 testpaths = ["tests"]
-markers = ["extract_models", "requires_fluent", "k_file_writer", "local", "downloader"]
+markers = ["extract_models", "requires_fluent", "k_file_writer", "requires_dpf"]
 tmp_path_retention_count = 0                                      # do not keep the temporary path that is created
 tmp_path_retention_policy = "none"                                # directories always removed, regardless of outcome
 
