--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -16,7 +16,7 @@ env:
   PYFLUENT_UI_MODE: "no_gui"
   # PYFLUENT_START_INSTANCE: 0
   # PYFLUENT_LAUNCH_CONTAINER: 1
-  # FLUENT_IMAGE_TAG: v24.2.0
+  FLUENT_IMAGE_TAG: v24.2.0
 
 jobs:
 
@@ -151,7 +151,8 @@ jobs:
       matrix:
         python-version: ['3.11', '3.12']
         tests:
-          - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or extract_models or k_file_writer)", use_dpf: true }
+          - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or extract_models or k_file_writer)"}
+          - { name: "PyDPF", runner: "ubuntu-latest", markers: "requires_dpf", use_dpf: true }
           - { name: "PyFluent", runner: ["self-hosted", "pyhealth"], markers: "requires_fluent or extract_models or k_file_writer", pull_fluent_image: false }
     steps:
 
