dbg: pass env variables

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,13 @@ passenv =
     PYANSYS_HEART*
     ANSYS_DPF_ACCEPT_LA
     GITHUB_ACTIONS
+    # Debugging
+    PACKAGE_NAME
+    MODULE
+    ANSYS_DPF_ACCEPT_LA
+    ANSYSLMD_LICENSE_FILE
+    AWP_ROOT*
+    ANSYS_DPF_PATH
 
 setenv =
     PYTHONUNBUFFERED = yes
