--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -161,6 +161,8 @@ jobs:
 
       - name: "Set up uv"
         uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5.4.0
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Set DPF Licensing
         if: matrix.tests.use_dpf
@@ -190,23 +192,9 @@ jobs:
           docker pull ghcr.io/ansys/pyfluent:$FLUENT_IMAGE_TAG
           docker image prune -f
 
-      - name: Install Python ${{ matrix.python-version }} and tox
-        run: |
-          uv venv .venv --seed --python ${{ matrix.python-version }}
-          uv pip install tox
-
       - name: Run tests
-        if: ${{ matrix.tests.runner == 'ubuntu-latest' }}
         run: |
-          . .venv/bin/activate
-          python -m tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
-
-      - name: Run tests
-        if: ${{ matrix.tests.name == 'PyFluent' }}
-        run: |
-          .venv\Scripts\Activate.ps1
-          python -m tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
-
+          uv tool run -e tests -- -m "${{ matrix.tests.markers }}" -vv
 
   build-library:
     name: "Build library"
