--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -14,8 +14,8 @@ env:
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
   PYFLUENT_UI_MODE: "no_gui"
-  # PYFLUENT_START_INSTANCE: 0
-  # PYFLUENT_LAUNCH_CONTAINER: 1
+  PYFLUENT_START_INSTANCE: 0
+  PYFLUENT_LAUNCH_CONTAINER: 1
   FLUENT_IMAGE_TAG: v24.2.0
 
 jobs:
@@ -153,7 +153,7 @@ jobs:
         tests:
           - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or extract_models or k_file_writer or requires_dpf)"}
           - { name: "PyDPF", runner: "ubuntu-latest", markers: "requires_dpf", use_dpf: true }
-          - { name: "PyFluent", runner: ["self-hosted", "pyhealth"], markers: "requires_fluent or extract_models or k_file_writer", pull_fluent_image: false }
+          - { name: "PyFluent", runner: "ubuntu-latest", markers: "requires_fluent or extract_models or k_file_writer", pull_fluent_image: true }
     steps:
 
       - name: Checkout project
