--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -9,6 +9,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  ANSYS_VERSION: '241'
   MAIN_PYTHON_VERSION: '3.11'
   DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-heart'
@@ -174,7 +175,7 @@ jobs:
         if: matrix.tests.use_dpf
         with:
           dpf-standalone-TOKEN: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
-          ANSYS_VERSION : "241"
+          ANSYS_VERSION : ${{ env.ANSYS_VERSION }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -194,7 +195,7 @@ jobs:
 
       - name: Run tests
         run: |
-          uv tool run tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
+          uv tool run tox -e tests -- -x testenv.deps+="-e dpf-standalone/v${{ env.ANSYS_VERSION }}" -m "${{ matrix.tests.markers }}" -vv
 
   build-library:
     name: "Build library"
