--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -13,7 +13,7 @@ env:
   DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
-  PYFLUENT_UI_MODE: "no_gui"
+  PYFLUENT_UI_MODE: "hidden_gui"
   PYFLUENT_START_INSTANCE: 0
   PYFLUENT_LAUNCH_CONTAINER: 1
   FLUENT_IMAGE_TAG: v24.2.0
@@ -191,6 +191,14 @@ jobs:
           # sudo rm -rf "$AGENT_TOOLSDIRECTORY"
           docker pull ghcr.io/ansys/pyfluent:$FLUENT_IMAGE_TAG
           docker image prune -f
+
+      - name: Run tests PyFluent
+        if: matrix.tests.pull_fluent_image
+        run: |
+          python -m pip install -e .
+          python -m pip install -e .[tests]
+          python -m pytest tests/heart/preprocessor/test_pyfluent.py
+          python -m pytest -m requires_fluent
 
       - name: Run tests
         run: |
