dbg: use old yml

--- a/.github/workflows/ci_cd_pyfluent.yml
+++ b/.github/workflows/ci_cd_pyfluent.yml
@@ -3,7 +3,7 @@
 name: Test model generation
 on:
   pull_request:
-    types: ['opened', 'edited', 'reopened', 'synchronize', 'draft']
+    types: ['opened', 'edited', 'reopened', 'synchronize']
   push:
     tags:
       - "*"
