--- a/.github/workflows/ci_cd_pyfluent.yml
+++ b/.github/workflows/ci_cd_pyfluent.yml
@@ -26,7 +26,7 @@ concurrency:
 
 jobs:
   build:
-    if: github.event.pull_request.draft == false && !contains(github.event.pull_request.labels.*.name, 'tests:skip')
+    # if: github.event.pull_request.draft == false && !contains(github.event.pull_request.labels.*.name, 'tests:skip')
     name: Tests requiring PyFluent
     runs-on: ubuntu-latest
     timeout-minutes: 45
