dbg: use old yml

--- a/.github/workflows/ci_cd_pyfluent.yml
+++ b/.github/workflows/ci_cd_pyfluent.yml
@@ -18,6 +18,7 @@ env:
   PYFLUENT_START_INSTANCE: 0
   PYFLUENT_LAUNCH_CONTAINER: 1
   FLUENT_IMAGE_TAG: v24.2.0
+  PIP_EXTRA_INDEX_URL: 'https://${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/'
 
 
 concurrency:
@@ -26,7 +27,7 @@ concurrency:
 
 jobs:
   build:
-    # if: github.event.pull_request.draft == false && !contains(github.event.pull_request.labels.*.name, 'tests:skip')
+    if: github.event.pull_request.draft == false && !contains(github.event.pull_request.labels.*.name, 'tests:skip')
     name: Tests requiring PyFluent
     runs-on: ubuntu-latest
     timeout-minutes: 45
@@ -62,11 +63,11 @@ jobs:
 
       # These tests will reuse an existing mesh and skip the step where the entire model
       # is remeshed.
-    #   - name: Test model generation
-    #     continue-on-error: false
-    #     run: |
-    #       pytest -m pytest -v -m "extract_models and not requires_fluent and not k_file_writer"
-    #       pytest -m pytest -v -m "k_file_writer"
+      - name: Test model generation
+        continue-on-error: false
+        run: |
+          pytest -m pytest -v -m "extract_models and not requires_fluent and not k_file_writer"
+          pytest -m pytest -v -m "k_file_writer"
 
       - name: Pull Fluent docker image
         run: |
