dbg: use old yml

--- a/.github/workflows/ci_cd_pyfluent.yml
+++ b/.github/workflows/ci_cd_pyfluent.yml
@@ -79,4 +79,5 @@ jobs:
       - name: Run all tests requiring (Py)Fluent
         continue-on-error: false
         run: |
+          docker image list
           pytest -m pytest -v -m "requires_fluent"
