dbg: use old yml

--- a/.github/workflows/ci_cd_pyfluent.yml
+++ b/.github/workflows/ci_cd_pyfluent.yml
@@ -80,4 +80,5 @@ jobs:
         continue-on-error: false
         run: |
           docker image list
+          pytest -m pytest -v tests/heart/preprocessor/test_pyfluent.py
           pytest -m pytest -v -m "requires_fluent"
