--- a/.github/workflows/ci_cd_pyfluent.yml
+++ b/.github/workflows/ci_cd_pyfluent.yml
@@ -80,6 +80,6 @@ jobs:
         continue-on-error: false
         run: |
           docker image list
-          pytest -m pytest -v tests/heart/preprocessor/test_pyfluent.py
-          pytest -m pytest -v tests/heart/preprocessor/test_mesher.py
-          pytest -m pytest -v -m "requires_fluent"
+          python -m pytest -v tests/heart/preprocessor/test_pyfluent.py
+          python -m pytest -v tests/heart/preprocessor/test_mesher.py
+          python -m pytest -v -m "requires_fluent"
