dbg: fix pyfluent tests

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ passenv =
     PYANSYS_HEART*
     ANSYS_DPF_ACCEPT_LA
     GITHUB_ACTIONS
+    ANSYSLMD_LICENSE_FILE
 
 setenv =
     PYTHONUNBUFFERED = yes
