--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -15,7 +15,6 @@ env:
   DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
-  PYFLUENT_UI_MODE: "no_gui"
   PYFLUENT_START_INSTANCE: 0
   PYFLUENT_LAUNCH_CONTAINER: 1
   FLUENT_IMAGE_TAG: v24.2.0
@@ -190,6 +189,8 @@ jobs:
 
       - name: Run Tox
         if: ${{ ! matrix.tests.needs_dpf }}
+        env:
+          PYFLUENT_UI_MODE: "hidden_gui"
         run: |
           uv tool run tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
 
