--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -21,68 +21,68 @@ env:
 
 jobs:
 
-  #labeler:
-  #  name: "Labels"
-  #  permissions:
-  #    contents: read
-  #    pull-requests: write
-  #  runs-on: ubuntu-latest
-  #  steps:
+  labeler:
+   name: "Labels"
+   permissions:
+     contents: read
+     pull-requests: write
+   runs-on: ubuntu-latest
+   steps:
 
-  #   - name: "Checkout project"
-  #     uses: actions/checkout@v4
+    - name: "Checkout project"
+      uses: actions/checkout@v4
 
-  #   - name: "Sync labels"
-  #     uses: micnncim/action-label-syncer@v1
-  #     env:
-  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: "Sync labels"
+      uses: micnncim/action-label-syncer@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  #   - name: "Label pull-request"
-  #     # HACK: skip if contributor does not have write permissions (forks)
-  #     if: github.event.pull_request.head.repo.full_name == github.repository
-  #     uses: actions/labeler@v5.0.0
-  #     with:
-  #      repo-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: "Label pull-request"
+      # HACK: skip if contributor does not have write permissions (forks)
+      if: github.event.pull_request.head.repo.full_name == github.repository
+      uses: actions/labeler@v5.0.0
+      with:
+       repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-  #changelog-fragment:
-  #  name: "Create changelog fragment"
-  #  runs-on: ubuntu-latest
-  #  needs: labeler
-  #  permissions:
-  #    contents: read
-  #    pull-requests: write
-  #  steps:
+  changelog-fragment:
+   name: "Create changelog fragment"
+   runs-on: ubuntu-latest
+   needs: labeler
+   permissions:
+     contents: read
+     pull-requests: write
+   steps:
 
-  #    - uses: ansys/actions/check-pr-title@main
-  #      with:
-  #        token: ${{ secrets.GITHUB_TOKEN }}
+     - uses: ansys/actions/check-pr-title@main
+       with:
+         token: ${{ secrets.GITHUB_TOKEN }}
 
-  #    - uses: ansys/actions/doc-changelog@main
-  #      with:
-  #        token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
-  #        use-conventional-commits: true
-  #        use-default-towncrier-config: true
-  #        bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-  #        bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+     - uses: ansys/actions/doc-changelog@main
+       with:
+         token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
+         use-conventional-commits: true
+         use-default-towncrier-config: true
+         bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+         bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
 
-  #code-style:
-  #  name: "Code style"
-  #  runs-on: ubuntu-latest
-  #  #needs: changelog-fragment
-  #  steps:
-  #    - uses: ansys/actions/code-style@v8
-  #      with:
-  #        python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  code-style:
+   name: "Code style"
+   runs-on: ubuntu-latest
+   #needs: changelog-fragment
+   steps:
+     - uses: ansys/actions/code-style@v8
+       with:
+         python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  #doc-style:
-  #  name: Documentation Style Check
-  #  runs-on: ubuntu-latest
-  #  #needs: changelog-fragment
-  #  steps:
-  #    - name: "Running documentation style checks"
-  #      uses: ansys/actions/doc-style@v8
-  #      with:
-  #        token: ${{ secrets.GITHUB_TOKEN }}
+  doc-style:
+   name: Documentation Style Check
+   runs-on: ubuntu-latest
+   #needs: changelog-fragment
+   steps:
+     - name: "Running documentation style checks"
+       uses: ansys/actions/doc-style@v8
+       with:
+         token: ${{ secrets.GITHUB_TOKEN }}
 
   wheelhouse:
     name: "Wheelhouse / ${{ matrix.os}} / ${{ matrix.python-version }}"
@@ -143,68 +143,68 @@ jobs:
           path: doc/_build/latex/*.pdf
           retention-days: 7
 
-  #tests:
-  #  name: "Tests / ${{ matrix.tests.runner }} / Python ${{ matrix.python-version }} / ${{ matrix.tests.name }}"
-  #  runs-on: ${{ matrix.tests.runner }}
-  #  needs: [code-style]
-  #  strategy:
-  #    fail-fast: false
-  #    matrix:
-  #      python-version: ['3.11', '3.12']
-  #      tests:
-  #        - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or requires_dpf)", tox_extra_args: ""}
-  #        - { name: "PyDPF", runner: "ubuntu-latest", markers: "requires_dpf", needs_dpf: true}
-  #        - { name: "PyFluent", runner: "ubuntu-latest", markers: "requires_fluent", needs_fluent: true }
-  #  steps:
+  tests:
+   name: "Tests / ${{ matrix.tests.runner }} / Python ${{ matrix.python-version }} / ${{ matrix.tests.name }}"
+   runs-on: ${{ matrix.tests.runner }}
+   needs: [code-style]
+   strategy:
+     fail-fast: false
+     matrix:
+       python-version: ['3.11', '3.12']
+       tests:
+         - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or requires_dpf)", tox_extra_args: ""}
+         - { name: "PyDPF", runner: "ubuntu-latest", markers: "requires_dpf", needs_dpf: true}
+         - { name: "PyFluent", runner: "ubuntu-latest", markers: "requires_fluent", needs_fluent: true }
+   steps:
 
-  #    - name: Checkout project
-  #      uses: actions/checkout@v4
+     - name: Checkout project
+       uses: actions/checkout@v4
 
-  #    - name: "Set up uv"
-  #      uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5.4.0
-  #      with:
-  #        python-version: ${{ matrix.python-version }}
+     - name: "Set up uv"
+       uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5.4.0
+       with:
+         python-version: ${{ matrix.python-version }}
 
-  #    - name: Install DPF
-  #      uses: ansys/pydpf-actions/install-dpf-server@v2.3
-  #      if: matrix.tests.needs_dpf
-  #      with:
-  #        dpf-standalone-TOKEN: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
-  #        ANSYS_VERSION : ${{ env.ANSYS_VERSION }}
+     - name: Install DPF
+       uses: ansys/pydpf-actions/install-dpf-server@v2.3
+       if: matrix.tests.needs_dpf
+       with:
+         dpf-standalone-TOKEN: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
+         ANSYS_VERSION : ${{ env.ANSYS_VERSION }}
 
-  #    - name: Login to GitHub Container Registry
-  #      uses: docker/login-action@v3
-  #      if: matrix.tests.needs_fluent
-  #      with:
-  #        registry: ghcr.io
-  #        username: ${{ github.actor }}
-  #        password: ${{ secrets.GITHUB_TOKEN }}
+     - name: Login to GitHub Container Registry
+       uses: docker/login-action@v3
+       if: matrix.tests.needs_fluent
+       with:
+         registry: ghcr.io
+         username: ${{ github.actor }}
+         password: ${{ secrets.GITHUB_TOKEN }}
 
-  #    - name: Pull Fluent docker image
-  #      if: matrix.tests.needs_fluent
-  #      run: |
-  #        sudo rm -rf /usr/share/dotnet
-  #        docker pull ghcr.io/ansys/pyfluent:${{ env.FLUENT_IMAGE_TAG }}
-  #        docker image prune -f
+     - name: Pull Fluent docker image
+       if: matrix.tests.needs_fluent
+       run: |
+         sudo rm -rf /usr/share/dotnet
+         docker pull ghcr.io/ansys/pyfluent:${{ env.FLUENT_IMAGE_TAG }}
+         docker image prune -f
 
-  #    - name: Run Tox
-  #      if: ${{ ! matrix.tests.needs_dpf }}
-  #      env:
-  #        PYFLUENT_UI_MODE: "hidden_gui"
-  #      run: |
-  #        uv tool run tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
+     - name: Run Tox
+       if: ${{ ! matrix.tests.needs_dpf }}
+       env:
+         PYFLUENT_UI_MODE: "hidden_gui"
+       run: |
+         uv tool run tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
 
-  #    - name: Run Tox
-  #      if: matrix.tests.needs_dpf
-  #      run: |
-  #        uv tool run tox -e tests -x testenv.deps+="-e dpf-standalone/v${{ env.ANSYS_VERSION }}" -- -m "${{ matrix.tests.markers }}" -vv
+     - name: Run Tox
+       if: matrix.tests.needs_dpf
+       run: |
+         uv tool run tox -e tests -x testenv.deps+="-e dpf-standalone/v${{ env.ANSYS_VERSION }}" -- -m "${{ matrix.tests.markers }}" -vv
 
-  #build-library:
-  #  name: "Build library"
-  #  runs-on: ubuntu-latest
-  #  needs: [doc-build, tests]
-  #  steps:
-  #    - uses: ansys/actions/build-library@v8
-  #      with:
-  #        library-name: ${{ env.LIBRARY_NAME }}
-  #        python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  build-library:
+   name: "Build library"
+   runs-on: ubuntu-latest
+   needs: [doc-build, tests]
+   steps:
+     - uses: ansys/actions/build-library@v8
+       with:
+         library-name: ${{ env.LIBRARY_NAME }}
+         python-version: ${{ env.MAIN_PYTHON_VERSION }}
