--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -68,7 +68,7 @@ jobs:
   code-style:
    name: "Code style"
    runs-on: ubuntu-latest
-   #needs: changelog-fragment
+   needs: changelog-fragment
    steps:
      - uses: ansys/actions/code-style@v8
        with:
@@ -77,7 +77,7 @@ jobs:
   doc-style:
    name: Documentation Style Check
    runs-on: ubuntu-latest
-   #needs: changelog-fragment
+   needs: changelog-fragment
    steps:
      - name: "Running documentation style checks"
        uses: ansys/actions/doc-style@v8
@@ -87,7 +87,7 @@ jobs:
   wheelhouse:
     name: "Wheelhouse / ${{ matrix.os}} / ${{ matrix.python-version }}"
     runs-on: ${{ matrix.os }}
-  #  needs: doc-style
+    needs: doc-style
     strategy:
       fail-fast: false
       matrix:
