--- a/.github/workflows/ci_cd_main.yml
+++ b/.github/workflows/ci_cd_main.yml
@@ -1,4 +1,5 @@
 name: main
+
 on:
   push:
     branches:
@@ -9,18 +10,21 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  ANSYS_VERSION: '241'
+  ANSYS_DPF_ACCEPT_LA: 'Y'
   MAIN_PYTHON_VERSION: '3.11'
   DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
-  PYFLUENT_UI_MODE: "no_gui"
+  PYFLUENT_START_INSTANCE: 0
+  PYFLUENT_LAUNCH_CONTAINER: 1
+  FLUENT_IMAGE_TAG: v24.2.0
 
 jobs:
 
   wheelhouse:
     name: "Wheelhouse / ${{ matrix.os}} / ${{ matrix.python-version }}"
     runs-on: ${{ matrix.os }}
-    needs: doc-style
     strategy:
       fail-fast: false
       matrix:
@@ -50,20 +54,31 @@ jobs:
           pattern: "*-wheelhouse-*"
 
       - name: "Install Python ${{ env.MAIN_PYTHON_VERSION }}"
-        uses: actions/setup-python@v5
+        uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5.4.0
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
       - name: "Install Tox"
         run: |
-          python -m venv .venv
-          .venv\Scripts\Activate.ps1
-          python -m pip install -U pip tox
+          uv tool install tox --with tox-uv
 
       - name: "Build documentation"
         run: |
-          .venv\Scripts\Activate.ps1
-          python -m tox -e doc-links,doc-html
+          tox -e doc-links,doc-html,doc-pdf
+
+      - name: Upload HTML documentation artifact
+        uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
+        with:
+          name: documentation-html
+          path: doc/_build/html
+          retention-days: 7
+
+      - name: Upload PDF documentation artifact
+        uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
+        with:
+          name: documentation-pdf
+          path: doc/_build/latex/*.pdf
+          retention-days: 7
 
   doc-deploy-dev:
     name: "Deploy dev docs"
@@ -72,7 +87,7 @@ jobs:
     steps:
       - uses: ansys/actions/doc-deploy-dev@v8
         with:
-          doc-artifact-name: "complete-documentation-html"
+          doc-artifact-name: "documentation-html"
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
           bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
