--- a/.github/workflows/ci_cd_night.yml
+++ b/.github/workflows/ci_cd_night.yml
@@ -1,64 +1,80 @@
 name: night
+
 on:
-
   schedule:
-    # All weekdays at 00:00 UTC.
     - cron: '0 0 * * *'
-
-env:
-  MAIN_PYTHON_VERSION: '3.11'
-  DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
-  LIBRARY_NAME: 'ansys-heart'
-  ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
-  PYFLUENT_UI_MODE: "no_gui"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  ANSYS_VERSION: '241'
+  ANSYS_DPF_ACCEPT_LA: 'Y'
+  MAIN_PYTHON_VERSION: '3.11'
+  DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
+  LIBRARY_NAME: 'ansys-heart'
+  ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
+  PYFLUENT_START_INSTANCE: 0
+  PYFLUENT_LAUNCH_CONTAINER: 1
+  FLUENT_IMAGE_TAG: v24.2.0
+
 jobs:
 
   tests:
-    name: "Tests / Windows / Python ${{ matrix.python-version }} / ${{ matrix.tests.name }}"
-    runs-on: ${{ matrix.tests.runner }}
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ['3.11', '3.12']
-        tests:
-          - { name: "Base", runner: "ubuntu-latest", markers: "not requires_fluent and not extract_models and not k_file_writer" }
-          - { name: "PyFluent", runner: "self-hosted", markers: "extract_models and not (requires_fluent or k_file_writer)" }
-    steps:
+   name: "Tests / ${{ matrix.tests.runner }} / Python ${{ matrix.python-version }} / ${{ matrix.tests.name }}"
+   runs-on: ${{ matrix.tests.runner }}
+   strategy:
+     fail-fast: false
+     matrix:
+       python-version: ['3.11', '3.12']
+       tests:
+         - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or requires_dpf)", tox_extra_args: ""}
+         - { name: "PyDPF", runner: "ubuntu-latest", markers: "requires_dpf", needs_dpf: true}
+         - { name: "PyFluent", runner: "ubuntu-latest", markers: "requires_fluent", needs_fluent: true }
+   steps:
 
-      - name: Checkout project
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+     - name: Checkout project
+       uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+     - name: "Set up uv"
+       uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5.4.0
+       with:
+         python-version: ${{ matrix.python-version }}
 
-      - name: Set Licensing
-        if: ${{ matrix.tests.runner == 'ubuntu-latest' }}
-        run: |
-          echo "ANSYS_DPF_ACCEPT_LA=Y" >> $GITHUB_ENV
+     - name: Install DPF
+       uses: ansys/pydpf-actions/install-dpf-server@v2.3
+       if: matrix.tests.needs_dpf
+       with:
+         dpf-standalone-TOKEN: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
+         ANSYS_VERSION : ${{ env.ANSYS_VERSION }}
 
-      - name: Install DPF
-        uses: ansys/pydpf-actions/install-dpf-server@v2.3
-        if: ${{ matrix.tests.runner == 'ubuntu-latest' }}
-        with:
-          dpf-standalone-TOKEN: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
-          ANSYS_VERSION : "241"
+     - name: Login to GitHub Container Registry
+       uses: docker/login-action@v3
+       if: matrix.tests.needs_fluent
+       with:
+         registry: ghcr.io
+         username: ${{ github.actor }}
+         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Installing dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[tests]
+     - name: Pull Fluent docker image
+       if: matrix.tests.needs_fluent
+       run: |
+         sudo rm -rf /usr/share/dotnet
+         docker pull ghcr.io/ansys/pyfluent:${{ env.FLUENT_IMAGE_TAG }}
+         docker image prune -f
 
-      - name: Run tests
-        run: |
-          python -m pytest -v -m "${{ matrix.tests.markers }}" tests
+     - name: Run Tox
+       if: ${{ ! matrix.tests.needs_dpf }}
+       env:
+         PYFLUENT_UI_MODE: "hidden_gui"
+       run: |
+         uv tool run tox -e tests -- -m "${{ matrix.tests.markers }}" -vv
+
+     - name: Run Tox
+       if: matrix.tests.needs_dpf
+       run: |
+         uv tool run tox -e tests -x testenv.deps+="-e dpf-standalone/v${{ env.ANSYS_VERSION }}" -- -m "${{ matrix.tests.markers }}" -vv
 
   wheelhouse:
     name: "Wheelhouse / ${{ matrix.os}} / ${{ matrix.python-version }}"
@@ -67,7 +83,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.11', '3.12', '3.13']
+        python-version: ['3.11', '3.12']
     steps:
       - uses: ansys/actions/build-wheelhouse@v8
         with:
@@ -83,41 +99,40 @@ jobs:
     steps:
 
       - name: "Checkout the project"
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
 
       - name: "Download wheelhouse into static path"
-        uses: actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806 # v4.1.9
+        uses: actions/download-artifact@v4
         with:
           path: "doc/source/_static/wheelhouse"
           pattern: "*-wheelhouse-*"
 
       - name: "Install Python ${{ env.MAIN_PYTHON_VERSION }}"
-        uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
+        uses: astral-sh/setup-uv@22695119d769bdb6f7032ad67b9bca0ef8c4a174 # v5.4.0
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
       - name: "Install Tox"
         run: |
-          python -m venv .venv
-          .venv\Scripts\Activate.ps1
-          python -m pip install -U pip tox
+          uv tool install tox --with tox-uv
 
       - name: "Build documentation"
         run: |
-          .venv\Scripts\Activate.ps1
-          python -m tox -e doc-links,doc-html,doc-pdf
+          tox -e doc-links,doc-html,doc-pdf
 
       - name: Upload HTML documentation artifact
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
         with:
           name: documentation-html
           path: doc/_build/html
+          retention-days: 7
 
       - name: Upload PDF documentation artifact
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
         with:
           name: documentation-pdf
           path: doc/_build/latex/*.pdf
+          retention-days: 7
 
   doc-deploy-dev:
     name: "Deploy dev docs"
@@ -126,6 +141,7 @@ jobs:
     steps:
       - uses: ansys/actions/doc-deploy-dev@v8
         with:
+          doc-artifact-name: "documentation-html"
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
           bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
