--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -104,7 +104,6 @@ jobs:
   doc-build:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
-    # runs-on: ubuntu-latest
     needs: wheelhouse
     steps:
 
@@ -203,7 +202,7 @@ jobs:
   build-library:
    name: "Build library"
    runs-on: ubuntu-latest
-   needs: tests
+   needs: [doc-build, tests]
    steps:
      - uses: ansys/actions/build-library@v8
        with:
