ci: workflow improvements (#951)
Co-authored-by: pyansys-ci-bot <92810346+pyansys-ci-bot@users.noreply.github.com>
Co-authored-by: mhoeijm <martijn.hoeijmakers@ansys.com>
Co-authored-by: Revathy Venugopal <104772255+Revathyvenugopal162@users.noreply.github.com>
Co-authored-by: Martijn <102799582+mhoeijm@users.noreply.github.com>
Co-authored-by: Muhammed Adedigba <muhammed.adedigba@ansys.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["flit_core >=3.2,<3.11"]
 build-backend = "flit_core.buildapi"
 
 [project]
 # Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
-name = "pyansys-heart"
+name = "ansys-heart"
 version = "0.11.dev0"
 description = "Python framework for heart modeling using ANSYS tools."
 readme = "README.rst"
-requires-python = ">=3.10,<4"
+requires-python = ">=3.11,<4"
 license = { file = "LICENSE" }
 authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
 maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
@@ -40,7 +40,7 @@ dependencies = [
     "vtk>=9.1.0, < 9.4",
     "httpx>=0.28.1",
     "natsort>=8.4.0",
-    "rich>=13.9.4"
+    "rich>=13.9.4",
 ]
 
 # Optional dependencies:
