--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,14 @@ basepython =
     tests313: python3.13
     {style,tests,doc}: python3
 
+passenv =
+    PYFLUENT_*
+    AWP_ROOT*
+    PYANSYS_HEART*
+    ANSYS_DPF_ACCEPT_LA
+    GITHUB_ACTIONS
+    ANSYSLMD_LICENSE_FILE
+
 setenv =
     PYTHONUNBUFFERED = yes
     coverage: PYTEST_EXTRA_ARGS = --cov=ansys.heart --cov-report=term --cov-report=xml:.cov/{env_name}/xml --cov-report=html:.cov/{env_name}/html
@@ -41,23 +49,30 @@ commands =
     pre-commit install
     pre-commit run --all-files --show-diff-on-failure
 
-[testenv:doc-{links,html,pdf}]
+[testenv:doc-{clean,links,html,pdf}]
 description =
     Environment for
+    clean: cleaning documentation generated files
     links: verifying the integrity of external links within the documentation
     html: generating HTML documentation
     pdf: generating PDF documentation
-
 allowlist_externals = pdflatex
+skip_install =
+    clean: true
 setenv =
     SOURCE_DIR = doc/source
     BUILD_DIR = doc/_build
     links: BUILDER = linkcheck
     html: BUILDER = html
     pdf: BUILDER = latex
-    links,html,pdf: BUILDER_OPTS = --color -v -j auto -W --keep-going
+    links,html,pdf: BUILDER_OPTS = --color -v -j auto
 extras = doc
 commands =
+    # Remove rendered documentation and additional static files
+    clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:BUILD_DIR}"
+    clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:STATIC_DIR}/artifacts"
+
+    # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
     pdf: pdflatex -interaction=nonstopmode -output-directory="{toxinidir}/{env:BUILD_DIR}/latex" "{toxinidir}/{env:BUILD_DIR}/latex/ansys-heart.tex"
 
