--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -202,7 +202,7 @@ jobs:
   build-library:
     name: "Build library"
     runs-on: ubuntu-latest
-    needs: doc-build
+    # needs: doc-build
     steps:
       - name: "Build-library"
         uses: ansys/actions/build-library@v8
