--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,4 @@
+# Labels for PRs based on file changes
 documentation:
 - changed-files:
   - any-glob-to-any-file: ['doc/source/**/*', 'README.rst']
