--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands =
 
     # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
-    pdf: pdflatex -interaction=nonstopmode -output-directory="{toxinidir}/{env:BUILD_DIR}/latex" "{toxinidir}/{env:BUILD_DIR}/latex/ansys-heart.tex"
+    pdf: pdflatex -interaction=nonstopmode -output-directory="{toxinidir}/{env:BUILD_DIR}/latex" "{toxinidir}/{env:BUILD_DIR}/latex/ansys-health-heart.tex"
 
 [testenv:dist]
 description = Checks project distribution
