--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -121,7 +121,7 @@ jobs:
           MPLBACKEND: Agg
           PYVISTA_OFF_SCREEN: 1
         run: |
-          tox -r -e doc-links,doc-html,doc-pdf
+          tox -e doc-links,doc-html,doc-pdf
 
       - name: Upload HTML documentation artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
