dbg: tox install vtk-osmesa

--- a/tox.ini
+++ b/tox.ini
@@ -73,8 +73,8 @@ commands =
     clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:STATIC_DIR}/artifacts"
 
     # Ensure vtk compatibility
-    html: uv pip uninstall --yes vtk
-    html: uv pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
+    links,html,pdf: python -m pip uninstall vtk -y
+    links,html,pdf: python -m pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
 
     # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
