fix: tox command

--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,9 @@ description =
     links: verifying the integrity of external links within the documentation
     html: generating HTML documentation
     pdf: generating PDF documentation
-allowlist_externals = pdflatex
+allowlist_externals =
+    pdflatex
+    uv
 skip_install =
     clean: true
 setenv =
@@ -73,7 +75,7 @@ commands =
     clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:STATIC_DIR}/artifacts"
 
     # Ensure vtk compatibility
-    html: uv pip uninstall --yes vtk
+    html: uv pip uninstall vtk
     html: uv pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
 
     # Render documentation with desired builder
