--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,6 @@ passenv =
     ANSYS_DPF_ACCEPT_LA
     GITHUB_ACTIONS
     ANSYSLMD_LICENSE_FILE
-    PYVISTA*
 
 setenv =
     PYTHONUNBUFFERED = yes
@@ -70,6 +69,13 @@ setenv =
     html: BUILDER = html
     pdf: BUILDER = latex
     links,html,pdf: BUILDER_OPTS = --color -v -j auto
+passenv =
+    PYFLUENT_*
+    AWP_ROOT*
+    PYANSYS_HEART*
+    ANSYS_DPF_ACCEPT_LA
+    ANSYSLMD_LICENSE_FILE
+
 extras = doc
 commands =
     # Remove rendered documentation and additional static files
