doc: add dyna example

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -119,6 +119,9 @@ jobs:
         env:
           PYANSYS_HEART_FLUENT_VERSION: 24.1
           PYFLUENT_LAUNCH_CONTAINER: 0
+          PYANSYS_HEART_LSDYNA_PATH: r"C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe"
+          PYANSYS_HEART_LSDYNA_PLATFORM: windows
+          PYANSYS_HEART_LSDYNA_TYPE: "smp"
           MPLBACKEND: Agg
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
         run: |
