dbg: dpf server

--- a/tox.ini
+++ b/tox.ini
@@ -86,6 +86,7 @@ commands =
     # Ensure vtk compatibility
     links,html: uv pip uninstall vtk
     links,html: uv pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
+    links,html: uv pip install -e C:\Program Files\ANSYS Inc\dpf-server-2024.2rc0
 
     # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
