dbg: dpf server

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -116,13 +116,14 @@ jobs:
 
       - name: "Build documentation"
         env:
-          PYANSYS_HEART_FLUENT_VERSION: 24.1
-          PYFLUENT_LAUNCH_CONTAINER: 0
+          # PYANSYS_HEART_FLUENT_VERSION: 24.1
+          # PYFLUENT_LAUNCH_CONTAINER: 0
           PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe
           PYANSYS_HEART_LSDYNA_PLATFORM: windows
           PYANSYS_HEART_LSDYNA_TYPE: "smp"
           LSTC_LICENSE: ansys
           AWP_ROOT241: C:\Program Files\ANSYS Inc\v241
+          DPF_STANDALONE_PATH: C:\Program Files\ANSYS Inc\dpf-server-2024.2rc0
           MPLBACKEND: Agg
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
         run: |
