doc: env variables to tox

--- a/tox.ini
+++ b/tox.ini
@@ -64,7 +64,8 @@ skip_install =
 setenv =
     SOURCE_DIR = doc/source
     BUILD_DIR = doc/_build
-    PYVISTA_OFFSCREEN = true
+    PYVISTA_OFF_SCREEN = true
+    MPLBACKEND = Agg
     links: BUILDER = linkcheck
     html: BUILDER = html
     pdf: BUILDER = latex
@@ -75,6 +76,7 @@ passenv =
     PYANSYS_HEART*
     ANSYS_DPF_ACCEPT_LA
     ANSYSLMD_LICENSE_FILE
+    DPF_STANDALONE_PATH
     *
 
 extras = doc
