doc: dbg pyfluent env deps

--- a/tox.ini
+++ b/tox.ini
@@ -72,12 +72,10 @@ setenv =
     links,html,pdf: BUILDER_OPTS = --color -v -j auto
 passenv =
     PYFLUENT_*
-    AWP_ROOT*
+    AWP*
     PYANSYS_HEART*
-    ANSYS_DPF_ACCEPT_LA
-    ANSYSLMD_LICENSE_FILE
     DPF_STANDALONE_PATH
-    *
+    ANSYS*
 
 extras = doc
 commands =
