doc: env variables to tox

--- a/tox.ini
+++ b/tox.ini
@@ -77,9 +77,12 @@ passenv =
     DPF_STANDALONE_PATH
     ANSYS*
     LSTC*
-    APPDATA
-    HOME*
+    TEMP*
+    Program*
     ICEM*
+    ; APPDATA
+    ; HOME*
+    ; ICEM*
 
 extras = doc
 commands =
