doc: dbg pyfluent env variables

--- a/tox.ini
+++ b/tox.ini
@@ -77,12 +77,7 @@ passenv =
     DPF_STANDALONE_PATH
     ANSYS*
     LSTC*
-    TEMP*
-    Program*
-    ICEM*
-    ; APPDATA
-    ; HOME*
-    ; ICEM*
+    * ; Allow all environment variables to be passed to the doc build. Required by PyFluent
 
 extras = doc
 commands =
